wisecow-app/kubernetes-wisecow/wisecow-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
  namespace: your-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow-container
          image: shrey871/wisecow-app:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
