wisecow-app/kubernetes-wisecow/wisecow-pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: wisecow-pod
  labels:
    app: wisecow
spec:
  containers:
  - name: wisecow-container
    image: shrey871/wisecow-app:latest
    ports:
    - containerPort: 4499
