wisecow-app/kubernetes-wisecow/wisecow-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 4499
  type: LoadBalancer
