wisecow-app/kubernetes-wisecow/wisecow-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
spec:
  tls:
    - hosts:
        - your-domain.com
      secretName: tls-secret
  rules:
    - host: your-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow-service
                port:
                  number: 443
